force-app/main/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <description>Object used for logging purpose (debug, callouts, exceptions...)</description>
    <label>Log</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}_{0000000000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>