force-app/main/default/objects/Log__c/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <description>Apex class that generates the log (from the start)</description>
    <label>Apex Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>