force-app/main/default/objects/Log__c/fields/ApexMethod__c.field-meta.xml
<CustomField>
    <fullName>ApexMethod__c</fullName>
    <description>Apex method that generates the log (from the start)</description>
    <label>Apex Method</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>