force-app/main/default/objects/Log__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <description>Application that creates the log record</description>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C3S</fullName>
                <default>true</default>
                <label>C3S</label>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>