force-app/main/default/objects/Log__c/fields/EntityData__c.field-meta.xml
<CustomField>
    <fullName>EntityData__c</fullName>
    <description>Entity Data</description>
    <label>Entity Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>