force-app/main/default/objects/Log__c/fields/EntityId__c.field-meta.xml
<CustomField>
    <fullName>EntityId__c</fullName>
    <description>Main entity ID</description>
    <label>Entity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>