force-app/main/default/objects/Log__c/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <description>Exception Type (NullPointerException, CalloutException etc...)</description>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>