force-app/main/default/objects/Log__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <description>Log identifier</description>
    <label>Identifier</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>