force-app/main/default/objects/Log__c/fields/ResponseStatusCode__c.field-meta.xml
<CustomField>
    <fullName>ResponseStatusCode__c</fullName>
    <description>HTTP Response status code</description>
    <label>Response Status Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>