force-app/main/default/objects/Log__c/fields/RunningUser__c.field-meta.xml
<CustomField>
    <fullName>RunningUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Running User that generates the log record</description>
    <label>Running User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>