force-app/main/default/objects/Log__c/recordTypes/Apex.recordType-meta.xml
<RecordType>
    <fullName>Apex</fullName>
    <active>true</active>
    <description>Apex log</description>
    <label>Apex</label>
</RecordType>