force-app/main/default/objects/Log__c/recordTypes/Callout.recordType-meta.xml
<RecordType>
    <fullName>Callout</fullName>
    <active>true</active>
    <description>Callout logs</description>
    <label>Callout</label>
</RecordType>