force-app/main/default/objects/Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ExceptionType__c</columns>
    <columns>ApexClass__c</columns>
    <columns>ApexMethod__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>StackTrace__c</columns>
    <columns>Details__c</columns>
    <columns>RunningUser__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>