force-app/main/default/objects/Log__c/listViews/Error_Apex.listView-meta.xml
<ListView>
    <fullName>Error_Apex</fullName>
    <columns>NAME</columns>
    <columns>StackTrace__c</columns>
    <columns>RunningUser__c</columns>
    <columns>Type__c</columns>
    <columns>ApexClass__c</columns>
    <columns>Description__c</columns>
    <columns>ExceptionType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>Error Apex</label>
</ListView>